# YASC

./: .gitignore  CMakeLists.txt  README.md  compile.sh  easy.txt  lexial.l  main.c  main.h  parser.y  scanner.l  syntax.y  syntax_tree.c  test.sh  tm.cpp
.github/workflows/: cmake-multi-platform.yml
include/: analyzer.h  main.h  symbol.h  tm.h  utils.h
sample/: easy.txt  problem.txt
src/: analyzer.c  main.c  parser.y  scanner.l  symbol.c  tm.c  utils.c
web/: README.md  package.json  pnpm-lock.yaml
web/src/: App.vue
